src/tests/function-calls/16.txt
function-calls/16.c:13:20: error: invalid initializer
   char string3[] = s3;
                    ^
function-calls/16.c:15:20: error: invalid initializer
   char string4[] = string;
                    ^
function-calls/16.c:19:15: error: invalid initializer
   int arr[] = aPtr;
               ^
